--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,13 @@
 root = true
 
-[*]
+[*.{js,jsx,ts,tsx,vue}]
 indent_style = space
 indent_size = 2
-end_of_line = lf
-charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*]
+charset = utf-8
 
 [*.md]
 trim_trailing_whitespace = false
