--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "serve": "vue-cli-service serve",
     "build": "BUILD_TYPE=modular vue-cli-service build",
     "build-bundle": "vue-cli-service build --target lib --name vue-bot-ui ./src/vue-bot-ui.js",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --fix"
   },
   "keywords": [
     "chatbot",
@@ -53,5 +53,8 @@
     "url": "https://github.com/JuzSer/vue-bot-ui/issues"
   },
   "homepage": "https://github.com/JuzSer/vue-bot-ui#readme",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "vuex": "^3.1.2"
+  }
 }
