--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
+    "vue-svg-loader": "^0.15.0",
     "vue-template-compiler": "^2.6.10"
   },
   "repository": {
