Fix: css.extract vue-cli

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "BUILD_TYPE=modular vue-cli-service build",
+    "build": "vue-cli-service build --dest demo",
     "build-bundle": "vue-cli-service build --target lib --name vue-bot-ui ./src/vue-bot-ui.js",
+    "release": "standard-version && git push --follow-tags && npm publish",
+    "release:next": "standard-version --prerelease next && git push --follow-tags origin dev && npm publish --tag next",
     "lint": "vue-cli-service lint --fix"
   },
   "keywords": [
