Update: isOpen prop

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
@@ -44,9 +43,10 @@
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "standard-version": "^7.0.1",
     "vue": "^2.6.10",
+    "vue-loader": "^15.8.3",
     "vue-svg-loader": "^0.15.0",
     "vue-template-compiler": "^2.6.10"
   },
