--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-bot-ui",
-  "version": "0.2.4",
+  "version": "0.2.5-next.0",
   "description": "Chatbot UI using Vue.js 2",
   "author": {
     "name": "SonNH",
