WIP: testing & css variables initial

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "paths": {
       "@/*": ["./src/*"],
     },
+    "types": [
+      "vitest/globals"
+    ]
   },
   "vueCompilerOptions": {
     "plugins": [
