--- a/package.json
+++ b/package.json
@@ -26,19 +26,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "@volar/vue-language-plugin-pug": "^1.0.11",
     "eslint": "^8.29.0",
     "eslint-plugin-vue": "^9.8.0",
+    "happy-dom": "^8.1.4",
     "path": "^0.12.7",
     "sass": "^1.56.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3",
+    "vite": "^4.0.4",
     "vite-plugin-dts": "^1.7.1",
     "vite-svg-loader": "^3.6.0",
+    "vitest": "^0.27.2",
     "vue": "^3.2.31",
     "vue-tsc": "^1.0.9"
   },
@@ -47,11 +52,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/juzser/vue-lib-scaffold"
+    "url": "https://github.com/juzser/vue-chat-ui"
   },
   "bugs": {
-    "url": "https://github.com/juzser/vue-lib-scaffold/issues"
+    "url": "https://github.com/juzser/vue-chat-ui/issues"
   },
-  "homepage": "https://github.com/juzser/vue-lib-scaffold#readme",
+  "homepage": "https://github.com/juzser/vue-chat-ui#readme",
   "license": "MIT"
 }
