--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "test": "vitest",
+    "test": "vitest --",
     "coverage": "vitest run --coverage",
     "preview": "vite preview"
   },
